[package]
name = "blimp_yoke_control"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = "0.37.0"
tokio = { version = "1.41.1", features = ["full"] }
blimp_ground_ws_interface = { git = "https://github.com/Space-Coffee/blimp_ground_ws_interface.git", branch = "develop" }
tokio-tungstenite = "0.24.0"
serde = "1.0.215"
postcard = { version = "1.0.10", features = ["use-std"] }
futures-util = "0.3.31"
serde_json = "1.0.135"
